# platform.core.telephony.tel-plugin-vconf

./: CMakeLists.txt  README
debian/: changelog  control  rules  tel-plugin-vconf.postinst
include/: vconf_core.h  vconf_handler.h  vconf_main.h
packaging/: tel-plugin-vconf.spec
src/: desc-vconf.c  vconf_core.c  vconf_handler.c  vconf_main.c
